codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_limit_reset_confirmation_monthly.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "states.join(\"\\n---\\n\")"
---
Free:
  Usage limit resets
  1 usage limit reset available.

› 1. Cancel
  2. Full reset (Monthly)  Does not expire.

  Press enter to confirm or esc to go back
---
Go:
  Usage limit resets
  1 usage limit reset available.

› 1. Cancel
  2. Use a reset  Reset your current monthly usage limit.

  Press enter to confirm or esc to go back
---
Business with monthly window:
  Usage limit resets
  1 usage limit reset available.

› 1. Cancel
  2. Full reset (Monthly)  Does not expire.

  Press enter to confirm or esc to go back
