codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_menu_with_referral_offer.snap
---
source: tui/src/chatwidget/tests/referrals.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Usage
  View account usage or redeem an earned reset.

› 1. Show usage                View recent account token usage.
  2. Redeem usage limit reset  Check reset availability.
  3. Invite someone to Codex   Invite someone to Codex. Rewards may apply.

  Press enter to confirm or esc to go back
