codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_output_unattributed.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: rendered
---
/usage

Daily usage by token share
Percent of consumed tokens in this selected range
(/usage week for weekly)

 No attributed skills, subagents, agent tasks,
 apps, MCP servers, or plugins in this range.
