codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 100)"
---
Usage
11% of your usage came from app "testmcp"
Tool results stay in context until compaction; compact or disable sources you do not need.

Skills
/tmux                      8%
/babysit                   6%

Subagents
babysit                   13%
code-review                9%

Apps
testmcp                   11%

d to day | w to week
