codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__visibility_hidden_hook_completion_flushes_prior_assistant_text_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"active hooks:\\n{}history:\\n{history}\", active_hook_blob(&chat))"
---
active hooks:
<empty>
history:
• I found the relevant policy.

• PostToolUse hook (completed)
  warning: review this managed hook warning
