codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__visibility_hidden_hooks_skip_routine_rows_but_render_failures_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"{routine_running_snapshot}\\n\\n{routine_completed_snapshot}\\n\\n{failed_snapshot}\")"
---
routine running
live hooks:
<empty>
history:
<empty>

routine completed
live hooks:
<empty>
history:
<empty>

failed
live hooks:
<empty>
history:
• PostToolUse hook (failed)
  error: hook exited with code 7
